This is the Change Log for PHPlot.
The project home page is http://sourceforge.net/projects/phplot/
-----------------------------------------------------------------------------

2010-07-27
    * Fixes for error bars:
      Code cleanup in DrawYErrorBar(), with no functional change.
      Suppress duplicate drawing of error bars with 'linepoints' error plots.
      This was already fixed for data labels. Now error bars will only be
      drawn by the 'points' part, not the 'lines' part. There should be no
      visible changes to plots. (This is needed for a future change).

2010-07-26
    * Horizontal bar charts (still an experimental feature) can now have data
      value labels.
    * HorizontalBars.txt: Fix incorrect description of bar direction. Add
      text explaining the new data value labels.

2010-06-29 (lbayuk)     ===== Released as 5.1.2 =====
    * phplot.php: Updated version
    * README.txt: Updated for new release
    * NEWS.txt: Add text for new release

2010-06-26
   * Feature request 2885930 "Horizontal Bars":
     Horizontal bar charts are implemented, as an experimental feature.
     A new data type 'text-data-yx' was added, which works with
     'bars' plot type to produce a horizontal bar chart from a data
     array with X values for each Y value. Changes were made to
     FindDataLimits, CalcMargins, CalcPlotAreaWorld, CalcBarWidths,
     and CalcMaxDataLabelSize to handle the new data type. Other
     changes were made to handle label position defaults and grid
     defaults. New drawing functions were added for horizontal bars.

   * HorizontalBars.txt: new documentation file for experimental feature.
   * Makefile: List new documentation file.

2010-06-25
   * Each plot-type drawing function now checks that it is getting a data
     type that it knows how to handle. A new internal function unifies the
     checking and error message. (This is associated with an upcoming,
     bigger change.)
